# waem

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  deploy.sh  docker-compose.yml  docker-deploy.sh  sample_bills.csv  test_output.docx
config/: template_config.json
src/: generate_sample.rs  lib.rs  main.rs  server.rs  template.rs  template_simple.rs
