[package]
name = "water_and_electricity_meter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "excel_to_word"
path = "src/main.rs"

[[bin]]
name = "generate_sample"
path = "src/generate_sample.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
calamine = "0.22"
docx-rs = "0.4"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
